Phase5/negative_tests/prog17.dlp
//Main method has argutents, but should not have any arguments

int main(x: int) {
    return 0;
}